[tool.poetry]
name = "transform"
version = "0.1.0"
description = ""
authors = ["Leonardo Möllmann Schöller <leoscholler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
rasterio = "^1.3.10"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
